# njam

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: argparse.h  arp.h  icmp.h  ip_utils.h  mask_utils.h  network.h  version.h
include/process/: jammer.h  scanner.h
packaging/: postinst
src/: argparse.c  arp.c  icmp.c  ip_utils.c  main.c  mask_utils.c  network.c  version.c
src/process/: jammer.c  scanner.c
